--- a/kiraye-car/package.json
+++ b/kiraye-car/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
+    "@material/react-tab-indicator": "^0.15.0",
+    "@material/tab-indicator": "^6.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
