--- a/kiraye-car/package.json
+++ b/kiraye-car/package.json
@@ -24,6 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy":"https://kiraye-car.herokuapp.com",
   "eslintConfig": {
     "extends": "react-app"
   },
