--- a/kiraye-car/package.json
+++ b/kiraye-car/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.53",
     "@material/react-tab-indicator": "^0.15.0",
     "@material/tab-indicator": "^6.0.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -24,7 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy":"https://kiraye-car.herokuapp.com",
+  "proxy": "https://kiraye-car.herokuapp.com",
   "eslintConfig": {
     "extends": "react-app"
   },
