--- a/kiraye-car/package.json
+++ b/kiraye-car/package.json
@@ -15,7 +15,9 @@
     "bootstrap": "^4.5.0",
     "material-ui-image": "^3.2.3",
     "react": "^16.13.1",
+    "react-animation": "^1.2.2",
     "react-dom": "^16.13.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1"
   },
