--- a/kiraye-car/package.json
+++ b/kiraye-car/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "material-ui-image": "^3.2.3",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-animation": "^1.2.2",
     "react-dom": "^16.13.1",
