--- a/kiraye-car/package.json
+++ b/kiraye-car/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "cookie-parser": "^1.4.5",
+    "js-cookie": "^2.2.1",
     "material-ui-image": "^3.2.3",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
@@ -28,7 +30,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://kiraye-car.herokuapp.com",
   "eslintConfig": {
     "extends": "react-app"
   },
