--- a/kiraye-car/package.json
+++ b/kiraye-car/package.json
@@ -13,14 +13,17 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "material-auto-rotating-carousel": "^3.0.2",
     "material-ui-image": "^3.2.3",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-animation": "^1.2.2",
     "react-dom": "^16.13.1",
+    "react-responsive-carousel": "^3.2.7",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "react-swipeable-views": "^0.13.9"
   },
   "scripts": {
     "start": "react-scripts start",
