--- a/kiraye-car/package.json
+++ b/kiraye-car/package.json
@@ -20,6 +20,7 @@
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-animation": "^1.2.2",
+    "react-bootstrap-carousel": "^4.0.6",
     "react-dom": "^16.13.1",
     "react-responsive-carousel": "^3.2.7",
     "react-reveal": "^1.2.2",
