--- a/kiraye-car/package.json
+++ b/kiraye-car/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.53",
+    "@material-ui/pickers": "^3.2.10",
     "@material/react-tab-indicator": "^0.15.0",
     "@material/tab-indicator": "^6.0.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -15,6 +16,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "cookie-parser": "^1.4.5",
+    "date-fns": "^2.14.0",
     "js-cookie": "^2.2.1",
     "material-auto-rotating-carousel": "^3.0.2",
     "material-ui-image": "^3.2.3",
